# CrowdFundingPlutusCardano

./: README.md
scripts/work/plutus-scripts/: OldParameterized.plutus
scripts/work/shell-scripts/: balance.sh  env  env.sh  payToScript.sh
scripts/work/transactions/: tx.draft  tx.signed  walletBalances.txt
starter/: emurgocdp.cabal
starter/src/Beneficiary/: BeneficiaryOffChain.hs  BeneficiaryOnChain.hs
starter/src/CrowdFunding/: BkCrowdFundingOffChainBk.hs  CrowdFundingEmulator.hs  CrowdFundingOffChain.hs  CrowdFundingOnChain.hs
starter/src/Parameterized/: Deploy.hs  ParameterEmulator.hs  ParameterOffChain.hs
starter/src/Utils/: CompilerFileParameterized.hs
starter/src/Validators/: CustomType.hs  CustomTypeOffChain.hs  SimpleType.hs  SimpleV.hs  tmp.hs
