cabal-version:      3.0
name:               emurgocdp
version:            0.1.0.0
stability: experimental

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Chakravarti

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    
    exposed-modules:
        -- Validators.MyLib
        Validators.SimpleV

    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      text -any,
      lens -any,
      cardano-api, 
      cardano-binary,
      --additionals
      serialise -any,
      base16-bytestring,
      data-default,
      openapi3
    hs-source-dirs: src







-- cabal-version:      2.4

-- -- Initial package description 'emurgocdp.cabal' generated by
-- -- 'cabal init'. For further documentation, see:
-- --   http://haskell.org/cabal/users-guide/
-- -- 
-- -- The name of the package.
-- name:               emurgocdp

-- -- The package version.
-- -- See the Haskell package versioning policy (PVP) for standards
-- -- guiding when and how versions should be incremented.
-- -- https://pvp.haskell.org
-- -- PVP summary:      +-+------- breaking API changes
-- --                   | | +----- non-breaking API additions
-- --                   | | | +--- code changes with no API change
-- version:            0.1.0.0

-- -- A short (one-line) description of the package.
-- synopsis:           First Project PlutusApps

-- -- A longer description of the package.
-- -- description:

-- -- URL for the project homepage or repository.
-- homepage:

-- -- A URL where users can report bugs.
-- -- bug-reports:

-- -- The license under which the package is released.
-- license:            NONE

-- -- The package author(s).
-- author:             Chakravarti Raghavan

-- -- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:         rchak1@aol.com

-- -- A copyright notice.
-- -- copyright:
-- -- category:

-- -- Extra files to be distributed with the package, such as examples or a README.
-- extra-source-files: CHANGELOG.md

-- library
--     -- Modules exported by the library.
--     exposed-modules:  MyLib

--     -- Modules included in this library but not exported.
--     -- other-modules:

--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:

--     -- Other library packages from which modules are imported.
--     build-depends:    base ^>=4.14.3.0

--     -- Directories containing source files.
--     hs-source-dirs:   src

--     -- Base language which the package is written in.
--     default-language: Haskell2010

-- executable emurgocdp
--     -- .hs or .lhs file containing the Main module.
--     main-is:          Main.hs

--     -- Modules included in this executable, other than Main.
--     -- other-modules:

--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:

--     -- Other library packages from which modules are imported.
--     build-depends:
--         base ^>=4.14.3.0,
--         emurgocdp

--     -- Directories containing source files.
--     hs-source-dirs:   app

--     -- Base language which the package is written in.
--     default-language: Haskell2010

-- test-suite emurgocdp-test
--     -- Base language which the package is written in.
--     default-language: Haskell2010

--     -- The interface type and version of the test suite.
--     type:             exitcode-stdio-1.0

--     -- Directories containing source files.
--     hs-source-dirs:   test

--     -- The entrypoint to the test suite.
--     main-is:          MyLibTest.hs

--     -- Test dependencies.
--     build-depends:    base ^>=4.14.3.0
